--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ flake8 = "^7.1.1"
 mypy = "^1.11.1"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
+black = "^24.8.0"
 
 [build-system]
 requires = ["poetry-core"]
