--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 requests = "^2.32.3"
 flake8 = "^7.1.1"
 pytest = "^8.3.2"
+psycopg2 = "^2.9.9"
 
 
 [tool.poetry.group.dev.dependencies]
