--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ mypy = "^1.11.1"
 requests = "^2.32.3"
 python-dotenv = "^1.0.1"
 black = "^24.8.0"
+mock = "^5.1.0"
 
 [build-system]
 requires = ["poetry-core"]
