--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 BASE_URL='https://api.example.com'
-employer_ids=[100000, 200000, 300000, 400000, 500000, 600000, 700000, 800000, 900000, 110000]
+employer_ids=100000,200000,300000,400000,500000,600000,700000,800000,900000,110000
+DB_HOST=localhost
+DB_USER=postgres
+DB_PASSWORD=password
+DB_PORT=5432
